--- a/car.html
+++ b/car.html
@@ -1,56 +1,74 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js"></script>
-<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/127738/OBJLoader.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
-<canvas id="scene"></canvas>
-<style>
-body,html{width:100%;height:100%;padding:0;margin:0;overflow: hidden;}
-</style>
+<html <!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/127738/OBJLoader.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+</head>
+<body>
+    <canvas id="scene"></canvas>
+    <style>
+        body,
+        html {
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
+            overflow: hidden;
+        }
+    </style>
+    
+    <script>
+        var socket = io('https://api.matadormotorsports.racing');
+        var renderer, scene, camera, car;
+        var ww = window.innerWidth,
+            wh = window.innerHeight;
+        function init() {
+            renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('scene') });
+            renderer.setSize(ww, wh);
+            scene = new THREE.Scene();
+            camera = new THREE.PerspectiveCamera(100000, ww / wh, 0.1, 100000);
+            camera.position.set(2 * ww, 0, 9 * ww);
+            scene.add(camera);
+            loadOBJ();
+        }
+        var loadOBJ = function () {
+            var manager = new THREE.LoadingManager();
+            var loader = new THREE.OBJLoader(manager);
+            loader.load('https://dl.dropbox.com/s/vz7f8k8mymrgq6y/sae.obj', addcarInScene);
 
-<script>
-    var socket = io('https://api.matadormotorsports.racing');
-    var renderer, scene, camera, car;
-    var ww = window.innerWidth,
-        wh = window.innerHeight;
-    function init() {
-        renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('scene') });
-        renderer.setSize(ww, wh);
-        scene = new THREE.Scene();
-        camera = new THREE.PerspectiveCamera(100000, ww / wh, 0.1, 100000);
-        camera.position.set(2 * ww, 0, 9 * ww);
-        scene.add(camera);
-        loadOBJ();
-    }
-    var loadOBJ = function () {
-        var manager = new THREE.LoadingManager();
-        var loader = new THREE.OBJLoader(manager);
-        loader.load('https://dl.dropbox.com/s/vz7f8k8mymrgq6y/sae.obj', addcarInScene);
-
-    };
-    var addcarInScene = function (object) {
-        car = object;
-        object.traverse(function (child) {
-            if (child instanceof THREE.Mesh) {
-                child.material = new THREE.MeshNormalMaterial()
-            }
+        };
+        var addcarInScene = function (object) {
+            car = object;
+            object.traverse(function (child) {
+                if (child instanceof THREE.Mesh) {
+                    child.material = new THREE.MeshNormalMaterial()
+                }
+            });
+            car.rotation.x = (3 * Math.PI / 4);
+            car.rotation.y = (2 * Math.PI);
+            car.rotation.z = 0;
+            car.position.z = 0
+            car.position.y = 4 * wh;
+            // car.position.x = 1500;
+            scene.add(car);
+            render();
+        };
+        var x, y, z = 0;
+        socket.on('gyroscope', function (data) {
+            x = car.rotation.x = (3 * (Math.PI / 4)) + data.x;
+            y = car.rotation.y = (2 * Math.PI) + data.y;
+            z = car.rotation.z = 0 + data.z;
         });
-        car.rotation.x = (3 * Math.PI / 4);
-        car.rotation.y = (2 * Math.PI);
-        car.rotation.z = 0;
-        car.position.z = 0
-        car.position.y = 4 * wh;
-        // car.position.x = 1500;
-        scene.add(car);
-        render();
-    };
-    var x, y, z = 0;
-    socket.on('gyroscope', function (data) {
-        x = car.rotation.x = (3 * Math.PI / 4) + data.x;
-        y = car.rotation.y = (2 * Math.PI) + data.y;
-        z = car.rotation.z = 0 + data.z;
-    });
-    var render = function () {
-        requestAnimationFrame(render);
-        renderer.render(scene, camera);
-    };
-    init();
+        var render = function () {
+            requestAnimationFrame(render);
+            renderer.render(scene, camera);
+        };
+        init();
     </script>
+</body>
+</html>
