--- a/car.html
+++ b/car.html
@@ -180,7 +180,7 @@
     </script>
     <script>
     var socket = io("https://api.matadormotorsports.racing");
-    io.on('connection', (socket) => {
+    io.on('connect', (socket) => {
         $(".mapboxgl-map").show();
         $("scene").show();
     };
